--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   그거 알아? 꿈이 이뤄지는 진짜 마법은 스스로를 믿기 시작하면서부터 일어난대
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://milkywaypeko.github.io"
 
 github:
   username: milkywaypeko # change to your github username
