--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.png"
+avatar: "https://github.com/milkywaypeko/milkywaypeko.github.io/blob/main/commons/avata.png?raw=true"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
