--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ avatar: "https://github.com/milkywaypeko/milkywaypeko.github.io/blob/main/common
 toc: true
 
 comments:
-  active: utterances # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
