--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,13 @@ timezone:
 
 title: Choi Hyeongjong Git # the main title
 
-tagline: You know what? The real magic of dreams coming true happens when you start believing in yourself. 그거 알아? 꿈이 이뤄지는 진짜 마법은 스스로를 믿기 시작하면서부터 일어난대. # it will display as the sub-title
-
+tagline: >-
+  You know what? The real magic of dreams coming true happens when you start believing in yourself.  # it will display as the sub-title
+  그거 알아? 꿈이 이뤄지는 진짜 마법은 스스로를 믿기 시작하면서부터 일어난대.
+  
 description: >- # used by seo meta and the atom feed
-  You know what? The real magic of dreams coming true happens when you start believing in yourself. 그거 알아? 꿈이 이뤄지는 진짜 마법은 스스로를 믿기 시작하면서부터 일어난대.
+  You know what? The real magic of dreams coming true happens when you start believing in yourself. 
+  그거 알아? 꿈이 이뤄지는 진짜 마법은 스스로를 믿기 시작하면서부터 일어난대.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://milkywaypeko.github.io"
